src/main/java/com/example/sos/employee/error/EmployeeErrorConst.java
package com.example.sos.employee.error;

public interface EmployeeErrorConst {
    String NOT_FOUND_EMPLOYEE_ERROR_MESSAGE = "직원을 찾을수 없습니다.";
    String INVALID_UPLOAD_FORMAT_ERROR_MESSAGE = "지원하지 않는 파일 형식입니다.";
    String ALREADY_EXIST_EMPLOYEE_ERROR_MESSAGE = "이미 존재하는 직원입니다.";
}
